--- a/index.html
+++ b/index.html
@@ -6,28 +6,24 @@
     if (window.location.protocol !== 'https:' && window.location.port < 1024) {
       // Not secure - Redirect to the secure version.
       // Please just comment this out for your own development.
-      (function() {
+      (function () {
         var newLocation = (window.location + '').substring(window.location.protocol.length)
         window.location.replace('https:' + newLocation)
       })()
     }
   </script>
+  <script data-main="src/entry" src='https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.js' async></script>
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/skeleton.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/octicons/octicons.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" />
-  <script src='https://code.jquery.com/jquery-1.12.0.min.js'></script>
-  <script src='lib/index.js'></script>
-  <script src='lib/other/oauth.js'></script>
-  <script>
-  OAuth.initialize('KUhN5ym8PYgEIgAy1hli3zBNN-g')
-  </script>
   <title>Let's Build a Hat Rack</title>
 </head>
 
 <body>
-  <div class="section header-section">
+  <div id='container'></div>
+  <!-- <div class="section header-section">
     <div class="intro-header">
       <div class="container">
         <h1 class="section-heading">
@@ -100,289 +96,7 @@
       </footer>
     </div>
 
-  </div>
-  <script>
-    /* eslint-env jquery */
+  </div> -->
 
-    window.cancelExec = null;
-    function bootstrapHatRack () {
-
-      var oauth = requestOauth(true)
-      if (!oauth) {
-        throw Error("Missing OAuth")
-      }
-      if (!window.history.state) {
-        throw Error("Missing state")
-      }
-      var repo = window.history.state['repo']
-      if (!repo) {
-        throw Error("Missing repo")
-      }
-
-      var removeProgressSpinners = createSpinners($('.progress').empty())
-      $('#repo-name').html(' for <a href="https://github.com/' + repo + '">' + repo + '</a>')
-
-      var shouldAbort = false;
-      var rejected = $.Deferred().reject(Error("Aborted")).promise()
-      function cancelExecution() {
-        shouldAbort = true;
-        removeProgressSpinners()
-      }
-      cancelExecution.repo = repo
-      window.cancelExec = cancelExecution
-
-      var cache = {}
-      var totalRequests = 0;
-      function cachedRequest (url) {
-        if (shouldAbort) {
-          return rejected
-        }
-        if (cache[url]) {
-          return cache[url]
-        } else {
-          var response = cache[url] = oauth.get(url)
-          return response.then(function() {
-            if (shouldAbort) {
-              return rejected
-            } else {
-              totalRequests++;
-              $('#request-information').text('(in ' + totalRequests + ' requests)')
-              return response
-            }
-          })
-        }
-      }
-      var hatRack = window.Labhr('https://api.github.com', cachedRequest)
-      var totalContributors = 0;
-      hatRack.load(repo, function (contributors) {
-        if (shouldAbort) {
-          return
-        }
-        if (contributors['codeContributors']) {
-          totalContributors += contributors['codeContributors'].length
-          contributors['codeContributors'].forEach(function (contributor) {
-            addContributor(contributorToHtml(repo, contributor, 'code'))
-          })
-        }
-        if (contributors['nonCodeOnlyContributors']) {
-          totalContributors += contributors['nonCodeOnlyContributors'].length
-          contributors['nonCodeOnlyContributors'].forEach(function (contributor) {
-            addContributor(contributorToHtml(repo, contributor, 'non-code'))
-          })
-        }
-        $('#contributor-count').text(totalContributors + ' ')
-      }).then(function () {
-        // All loading is complete
-        removeProgressSpinners()
-      })
-    }
-
-    function addContributor (codeHtml) {
-      var children = $('#contributors').children()
-      if (children.length === 0) {
-        // No children so just.
-        $('#contributors').append(codeHtml)
-      } else {
-        var random_index = Math.floor(Math.random() * (children.length + 1))
-        if (random_index === children.length) {
-          // Add at the end.
-          $('#contributors').append(codeHtml)
-        } else {
-          // Otherwise insert it before the chosen element.
-          $(children[random_index]).before(codeHtml)
-        }
-      }
-    }
-    function contributorToHtml (project, contributor, type) {
-      var username = contributor['login']
-      var userDisplayName = contributor['name'] || username
-      var url = 'https://github.com/' + project + '/issues?q=involves:' + username
-      var avatar = contributor['avatar_url'] + '&s=128'
-
-      // Construct the contibutor's HTML using jQuery.
-      var surounding_div = $('<div class="' + type + '">')
-      var linkTag = $('<a href="' + url + '"></a>')
-      var avatarImg = $('<img src="' + avatar + '" width="128" alt="' + username + '">')
-      var overlay = $('<div class="overlay"></div>')
-      linkTag.append(avatarImg, overlay)
-      var displayName = $('<div>' + userDisplayName + '</div>')
-
-      return surounding_div.append(linkTag, displayName)
-    }
-
-    function createSpinners (elements) {
-      // I needed a progress spinner thing, and this was quick and hacky
-      var addedElms = $('<span>&#8226;</span><span>&#8226;</span><span>&#8226;</span>')
-      $(elements).append(
-        addedElms
-      )
-      var property = 'font-size'
-      var value = '110%'
-      var progressSpinnerTimeout = 0
-      function timer (currIdx) {
-        var progress = $('.progress')
-        if (progress) {
-          progressSpinnerTimeout = setTimeout(timer, 300, (currIdx + 1) % 3)
-          $(addedElms).css(property, '')
-          $(addedElms[currIdx]).css(property, value)
-        }
-      }
-      timer(1)
-      return function () {
-        window.clearTimeout(progressSpinnerTimeout)
-        addedElms.remove()
-      }
-    }
-
-    function validateRepo (repo) {
-      // Really dubm. Basically 1 slash with at least 1 non-slash either side.
-      return /[^\/#]+\/[^\/#]+/.test(repo)
-    }
-
-    function loadLocation() {
-      if (window.history.state) {
-        // We have something in the state object. So we can just use that.
-        console.log("We have state already. Handle it.")
-        setLocation(window.history.state['repo'])
-        return
-      }
-
-      var repoParamRegexp = /repo=([^&]+)/
-      var hash = window.location.hash + ''
-      if (hash.indexOf('%') !== -1) {
-        // URI encoded, fix that
-        hash = window.decodeURIComponent(hash)
-      }
-      var repoMatch = repoParamRegexp.exec(hash)
-      if (!repoMatch) {
-        // Nothing I can see in the URL.
-        setLocation(null, true)
-      } else {
-        // Replace this location with one that has state.
-        setLocation(repoMatch[1], true)
-      }
-    }
-
-    function setLocation (repo, replace) {
-      console.log("Setting location", repo, " - Replacing?", !!replace)
-      var noLocationChange = window.history.state && window.history.state['repo'] === repo
-      function stateChange (state, title, url) {
-        if (replace || noLocationChange) {
-          return window.history.replaceState(state, title, url)
-        } else {
-          return window.history.pushState(state, title, url)
-        }
-      }
-      if (repo) {
-        stateChange({'repo': repo}, 'Let\'s Build a Hat Rack -- ' + repo,
-                                 '#repo=' + repo)
-      } else {
-        stateChange({'repo': null}, 'Let\'s Build a Hat Rack', '#')
-      }
-      _setRepo()
-    }
-    function _setRepo() {
-      if (!window.history.state) {
-        var repo = null;
-      } else {
-        var repo = window.history.state['repo']
-      }
-
-      var oauth_credentials = requestOauth(true)
-      console.log("Setting the repo? -", repo, "Got creds?", oauth_credentials, !!oauth_credentials)
-      if (!repo) {
-        if (window.cancelExec) {
-          window.cancelExec()
-          window.cancelExec = null
-        }
-        $('#contributors').empty()
-        $('#contributor-count').empty()
-        $('#request-information').empty()
-        $('#repo-name').empty()
-      } else {
-        $('input[name="repo"]').val(repo)
-      }
-      // Use '!!' to coerce to a boolean
-      var showContrib = !!(repo && oauth_credentials)
-      if (showContrib) {
-        // Have a repo and credentials
-        if (window.cancelExec && window.cancelExec.repo !== repo) {
-          // Currently loading a different repo's things.
-          window.cancelExec()
-          window.cancelExec = null
-        }
-        if (!window.cancelExec) {
-          // We're clear to start another hat rack.
-          bootstrapHatRack()
-        }
-      }
-      $('.invalid').removeClass('invalid')
-      $('#initial-form').toggle(!showContrib)
-      $('#all-contributors').toggle(showContrib)
-      $('input[name="repo"]').prop('disabled', showContrib)
-      $('#github-oauth').prop('disabled', showContrib)
-      $('#search-again button').prop('disabled', !showContrib)
-      $('#permalink a').prop('href', window.location.href)
-    }
-
-    function requestOauth(immediate) {
-      var oauth = OAuth.create('github');
-      // If we have oauth, then enable the signout button.
-      $('#signout button').prop('disabled', !oauth)
-      if (immediate) {
-        return oauth
-      } else if (oauth) {
-        return $.Deferred().resolve(oauth).promise();
-      }
-      return OAuth.popup('github', {cache: true}).done(function (githubApi) {
-        $('#signout button').prop('disabled', false)
-        // bootstrapHatRack(repo, githubApi)
-        return githubApi
-      }).fail(function (err) {
-        console.log(err)
-        button.addClass('invalid')
-      })
-    }
-
-    $(document).ready(function() {
-      requestOauth(true)  // Update the signout button.
-      loadLocation()
-      $(window).on('popstate', _setRepo)
-      $('#signout button').click(function (event) {
-        event.preventDefault()
-        $(this).prop('disabled', true)
-        OAuth.clearCache();
-        if (window.cancelExec) {
-          // Currently loading a different repo's things.
-          window.cancelExec()
-          window.cancelExec = null
-        }
-        _setRepo();
-      })
-      $('#search-again button').click(function (event) {
-        event.preventDefault()
-        setLocation(null)
-      })
-      $('#permalink a').click(function(event) {
-        // event.preventDefault()
-      })
-      $('button#github-oauth').click(function (event) {
-        event.preventDefault()
-        $('.invalid').removeClass('invalid')
-        var repo = $('input[name="repo"]').val()
-        if (!validateRepo(repo)) {
-          // Invalid repo name.
-          $('input[name="repo"]').prop('disabled', false).addClass('invalid')
-          return
-        }
-        $('input[name="repo"]').prop('disabled', true)
-        var button = $(this).prop('disabled', true)
-        var cancelSpinners = createSpinners(this)
-        requestOauth().then(function() {
-          setLocation(repo)
-        }).always(cancelSpinners)
-      })
-    })
-  </script>
 </body>
 </html>
