--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/octicons/octicons.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" />
-  <title>Let's Build a Hat Rack</title>
+  <title>React Build a Hat Rack</title>
 </head>
 
 <body>
